[build-system]
requires = [ "poetry-core>=1.0.0",]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "hms2"
version = "1.3.1r"
description = "Another annotation-free whole-slide training approach to pathological classification."
license = "CC BY-NC-SA 4.0"
authors = [ "Chi-Chung Chen <chenchc@aetherai.com>",]

[tool.poetry.dependencies]
python = ">=3.7, <3.11"
numpy = "^1.21.6"
opencv-python = "^4.5.5.64"
scipy = "^1.7"
Pillow = "^9.1.0"
scikit-image = "^0.19.2"
requests = "^2.27.1"
scikit-learn = "^1.0.2"
tqdm = "^4.64.0"
mpi4py = "^3.1.3"
PyYAML = "^6.0"
pandas = ">=1.3.5, <1.4"
lifelines = "^0.27.0"
pycryptodome = "^3.14.1"
scikit-build = "^0.14.1"
openslide-python = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.1"
isort = "^5.10.1"
mypy = "^0.942"
poethepoet = "^0.13.1"
types-PyYAML = "^6.0.5"
onnxruntime-gpu = "^1.10.0"
cython = "^0.29.28"
toml = "^0.10.2"

[tool.poe.tasks]
install-torch-cu113 = "python -m pip install torch torchvision --extra-index-url https://download.pytorch.org/whl/cu113"
install-torch-cu102 = "python -m pip install torch torchvision"
install-cu113 = [ "install-torch-cu113", "install-horovod",]
install-cu102 = [ "install-torch-cu102", "install-horovod",]

[tool.poe.tasks.install-horovod]
cmd = "python -m pip install horovod --no-cache-dir"

[tool.poe.tasks.install-horovod.env]
HOROVOD_WITH_PYTORCH = "1"
